--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uyku - Ana Sayfa</title>
-    <link rel="stylesheet" href="/files/css/styles.css">
+    <link rel="stylesheet" href="files/css/styles.css">
 
     <audio autoplay="autoplay">
         <source src="/files/photo/music.mp3" type="audio/ogg" />
