--- a/iletisim.html
+++ b/iletisim.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uykucu</title>
-    <link rel="stylesheet" href="/files/css/styless.css">
+    <link rel="stylesheet" href="files/css/styless.css">
 
     <audio autoplay="autoplay">
-        <source src="/files/photo/music.mp3" type="audio/ogg" />
-        <source src="/files/photo/music.mp3" type="audio/mpeg" />
+        <source src="files/photo/music.mp3" type="audio/ogg" />
+        <source src="files/photo/music.mp3" type="audio/mpeg" />
         Tarayıcınız ses sistemini desteklemiyor.
       </audio>
 
@@ -37,6 +37,6 @@
 
     </footer>
     
-    <script src="script.js"></script>
+    <script src="files/script.js"></script>
 </body>
 </html>
