--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="files/css/styles.css">
 
     <audio autoplay="autoplay">
-        <source src="/files/photo/music.mp3" type="audio/ogg" />
-        <source src="/files/photo/music.mp3" type="audio/mpeg" />
+        <source src="files/photo/music.mp3" type="audio/ogg" />
+        <source src="files/photo/music.mp3" type="audio/mpeg" />
         Tarayıcınız ses sistemini desteklemiyor.
       </audio>
 
@@ -30,7 +30,7 @@
     <section class="content">
         <div class="container">
             <h2>UYUYORUM</h2>
-            <img src="/files/photo/zzz.png" alt="resim">
+            <img src="files/photo/zzz.png" alt="resim">
             <p>Uyku her zaman güzeldir iyi geceler...</p>
         </div>
     </section>
@@ -38,6 +38,6 @@
 
     </footer>
     
-    <script src="script.js"></script>
+    <script src="files/script.js"></script>
 </body>
 </html>
