--- a/iletisim.html
+++ b/iletisim.html
@@ -19,7 +19,7 @@
             <h1>Uykucu</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Ana Sayfa</a></li>
+                    <li><a href="/sleep/index.html">Ana Sayfa</a></li>
                     <li><a href="https://pleasannt.github.io/web/">Kişisel Site</a></li>
                 </ul>
             </nav>
