--- a/iletisim.html
+++ b/iletisim.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uykucu</title>
     <link rel="stylesheet" href="files/css/styless.css">
-
+    
     <audio autoplay="autoplay">
-        <source src="files/photo/music.mp3" type="audio/ogg" />
-        <source src="files/photo/music.mp3" type="audio/mpeg" />
+        <source src="/files/photo/music.mp3" type="audio/ogg" />
+        <source src="/files/photo/music.mp3" type="audio/mpeg" />
         Tarayıcınız ses sistemini desteklemiyor.
       </audio>
 
