--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="https://pleasannt.github.io/web/">Kişisel Site</a></li>
-                    <li><a href="/iletisim.html">Uykucu</a></li>
+                    <li><a href="/sleep/iletisim.html">Uykucu</a></li>
                 </ul>
             </nav>
         </div>
