--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="files/css/styles.css">
 
     <audio autoplay="autoplay">
-        <source src="files/photo/music.mp3" type="audio/ogg" />
-        <source src="files/photo/music.mp3" type="audio/mpeg" />
+        <source src="/sleep/files/photo/music.mp3" type="audio/ogg" />
+        <source src="/sleep/files/photo/music.mp3" type="audio/mpeg" />
         Tarayıcınız ses sistemini desteklemiyor.
       </audio>
 
