--- a/iletisim.html
+++ b/iletisim.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="files/css/styless.css">
     
     <audio autoplay="autoplay">
-        <source src="/files/photo/music.mp3" type="audio/ogg" />
-        <source src="/files/photo/music.mp3" type="audio/mpeg" />
+        <source src="/sleep/files/photo/music.mp3" type="audio/ogg" />
+        <source src="/sleep/files/photo/music.mp3" type="audio/mpeg" />
         Tarayıcınız ses sistemini desteklemiyor.
       </audio>
 
@@ -19,7 +19,7 @@
             <h1>Uykucu</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Ana Sayfa</a></li>
+                    <li><a href="/sleep/index.html">Ana Sayfa</a></li>
                     <li><a href="https://pleasannt.github.io/web/">Kişisel Site</a></li>
                 </ul>
             </nav>
